# wincli

./: Cargo.toml
hello/tests/: cli.rs
rustcli/: Cargo.toml  README.md
rustcli/src/: main.rs
rusty-journal/: Cargo.toml
rusty-journal/src/: cli.rs
src/: cmds.rs  main.rs
src/cmds/: hello.rs  help.rs
